--- a/style.css
+++ b/style.css
@@ -4,9 +4,18 @@ html, body
   margin: 0;
 }
 
-body
-{
-background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73aa, #006494);
+.body-login 
+{	
+background-image: url("background-textures.png");
+background-position: center;
+background-size: cover;
+}
+
+.body-room
+{	
+background-image: url("green.png");
+background-position: center;
+background-size: cover;
 }
 
 .header
